2003-01-14  Anders Carlsson  <andersca@gnu.org>

	* monikers/bonobo-config-bag.c (bonobo_config_bag_new): Fix comment.

2003-01-09  Alexander Larsson  <alexl@redhat.com>

	* schemas/Makefile.am (schema_in_files): 
	* schemas/desktop_gnome_thumbnailers.schemas.in:
	Add schemas for thumbnailers.

2003-01-08  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.90

2003-01-08  Jody Goldberg <jody@gnome.org>

	* schemas/desktop_gnome_accessibility_keyboard.schemas.in : set
	  defaults to 0 to fix #96483

2002-12-24 John Fleck <jfleck@inkstain.net>

	* help-converters/info/main.c
	output title, fixing bug #83905

2002-12-16  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.5

2002-12-12  Chema Celorio  <chema@celorio.com>

	* acconfig.h: Trying to fix the autoheader warning didn't worked because
	we are pulling one AC_DEFINE from gnome-common. I added acconfig.h back
	so that autogen works again (when running autoheader) but the autoheader warning
	is back. We need to fix gnome-common but fixing libgnome again (removing acconfig.h)
	would require people to have the fixed version of gnome-common.

2002-12-11  Christian Neumair  <chris@gnome-de.org>

	* schemas/desktop_gnome_interface.schemas.in: Forgot to specify
	<type>, too. Thanks to Yanko Kaneti <yaneti@declera.com>.

2002-12-11  Christian Neumair  <chris@gnome-de.org>

	* schemas/desktop_gnome_interface.schemas.in: Brown-paperbag:
	Changed a closing tag from </apply> to </applyto>. Thanks to
	Joe Marcus Clarke <marcus@FreeBSD.org> for reporting this bug.

2002-12-09  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.1.4

2002-12-07  Andras Timar  <timar@gnome.hu>

	* configure.in: Added Hungarian (hu) to ALL_LINGUAS

2002-12-06  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added Czech (cs) to ALL_LINGUAS

2002-12-01  Christian Neumair  <chris@gnome-de.org>

	* schemas/desktop_gnome_interface.schemas.in: Various fixes,