@@ -97,5 +97,37 @@
 	</long>
       </locale>
     </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/peripherals/mouse/cursor_theme</key>
+      <applyto>/desktop/gnome/peripherals/mouse/cursor_theme</applyto>
+      <owner>gnome</owner>
+      <type>string</type>
+      <locale name="C">
+	<short>Cursor theme</short>
+	<long>
+	  Cursor theme name.  Used only by Xservers that support
+	  Xcursor, such as XFree86 4.3 and later.  This value is only
+	  propagated to the X server start of each session, so changing
+	  it mid-session won't have an effect until the next time you
+	  log in.
+	</long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/peripherals/mouse/cursor_size</key>
+      <applyto>/desktop/gnome/peripherals/mouse/cursor_size</applyto>
+      <owner>gnome</owner>
+      <type>int</type>
+      <default>18</default>
+      <locale name="C">
+	<short>Cursor size</short>
+	<long>
+	  Size of the cursor referenced by cursor_theme.  This value is
+	  only propagated to the X server start of each session, so
+	  changing it mid-session won't have an effect until the next
+	  time you log in.
+	</long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
