@@ -1,3 +1,9 @@
+Fri Jan 17 15:25:39 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* schemas/desktop_gnome_peripherals_mouse.schemas.in: add
+	/desktop/gnome/peripherals/mouse/cursor_theme and
+	/desktop/gnome/peripherals/mouse/cursor_size
+
 2003-01-14  Anders Carlsson  <andersca@gnu.org>
 
 	* monikers/bonobo-config-bag.c (bonobo_config_bag_new): Fix comment.
